Formatted Lombok issue resolved